# ComputerGraphics

./: .gitignore  CMakeLists.txt  ComputerGraphics.sln  ComputerGraphics.vcxproj  ComputerGraphics.vcxproj.filters  vcpkg.json
apps/: CMakeLists.txt  app.cpp
apps/1_test/: CMakeLists.txt  game.hpp  main.cpp  square_component.hpp  square_component_alt.hpp
apps/2_pong/: CMakeLists.txt  background.hpp  ball.hpp  field.hpp  game.hpp  main.cpp  player.hpp  team.hpp
apps/3_solar_system/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  skybox.cpp  skybox.hpp
apps/3_solar_system/celestials/: deimos.cpp  deimos.hpp  earth.cpp  earth.hpp  jupyter.cpp  jupyter.hpp  mars.cpp  mars.hpp  mercury.cpp  mercury.hpp  moon.cpp  moon.hpp  neptune.cpp  neptune.hpp  phobos.cpp  phobos.hpp  saturn_ring.cpp  saturn_ring.hpp  sun.cpp  sun.hpp  uranus.cpp  uranus_ring.cpp  venus.cpp  venus.hpp
apps/3_solar_system/celestials/earth/: earth.cpp  earth.hpp  moon.cpp  moon.hpp
apps/3_solar_system/celestials/mars/: deimos.cpp  deimos.hpp  mars.cpp  mars.hpp  phobos.cpp  phobos.hpp
apps/3_solar_system/celestials/saturn/: saturn.cpp  saturn.hpp  saturn_ring.cpp
apps/3_solar_system/celestials/uranus/: uranus.cpp  uranus.hpp  uranus_ring.cpp  uranus_ring.hpp
apps/4_katamari/: CMakeLists.txt  field.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp  player_child.cpp  player_child.hpp  viewport_manager.hpp
apps/4_katamari/objects/: M91.hpp  bench.hpp  gear.hpp  portal.hpp  sign.hpp
apps/pong/: CMakeLists.txt  ball.hpp  direction.hpp  game.hpp  host.hpp  main.cpp  player.hpp
apps/test/: CMakeLists.txt  clear_screen_component.hpp  game.hpp  main.cpp  square_component.hpp  test.cpp  test_game.hpp  window_title_component.hpp
include/computer_graphics/: Component.hpp  Game.hpp  Timer.hpp  TriangleComponent.hpp  Window.hpp  box_component.hpp  camera.hpp  camera_manager.hpp  collision.hpp  collision.inl  component.hpp  concepts.hpp  debug_draw.hpp  delegates.hpp  game.fwd  game.hpp  game.inl  geometric_primitive_component.hpp  input.hpp  input_device.hpp  input_key.hpp  light.hpp  material.hpp  math.hpp  mesh_component.hpp  mesh_component.inl  orbit_camera_manager.hpp  projection.hpp  scene_component.hpp  scene_component.inl  spectator_camera_manager.hpp  timer.hpp  transform.hpp  triangle_component.hpp  viewport.hpp  viewport_manager.hpp  window.hpp
include/computer_graphics/alloc/: inline_allocator.hpp  inline_allocator.inl
include/computer_graphics/delegate/: delegate.hpp  delegate_handle.hpp  delegate_handle.inl  delegate_kind.hpp  lambda_delegate.hpp  lambda_delegate.inl  member_function.hpp  multicast_delegate.hpp  multicast_delegate.inl  raw_delegate.hpp  raw_delegate.inl  shared_ptr_delegate.hpp  shared_ptr_delegate.inl  static_delegate.hpp  static_delegate.inl
include/computer_graphics/detail/: check_result.hpp  check_result.inl  d3d_ptr.hpp  err_handling_api.hpp  shader.hpp  string_api_set.hpp  texture.hpp
resources/meshes/M91/: M91.fbx
resources/meshes/portal/: StonePortal1.fbx
resources/meshes/sign/: sign.fbx
resources/shaders/: chess.hlsl  katamari.hlsl  light.hlsl  shader.hlsl
src/: CMakeLists.txt  Component.cpp  Game.cpp  Timer.cpp  TriangleComponent.cpp  Window.cpp  box_component.cpp  camera.cpp  camera_manager.cpp  collision.cpp  component.cpp  debug_draw.cpp  delegates.cpp  game.cpp  geometric_primitive_component.cpp  input.cpp  input_device.cpp  light.cpp  math.cpp  orbit_camera_manager.cpp  projection.cpp  scene_component.cpp  spectator_camera_manager.cpp  timer.cpp  transform.cpp  triangle_component.cpp  viewport.cpp  viewport_manager.cpp  window.cpp
src/delegate/: delegate.cpp  delegate_handle.cpp  delegate_kind.cpp
src/detail/: check_result.cpp  err_handling_api.cpp  shader.cpp  string_api_set.cpp  texture.cpp
